update swagger, migration and fix models
